--- a/.github/workflows/it-scaling.yml
+++ b/.github/workflows/it-scaling.yml
@@ -32,6 +32,7 @@ on:
       - '**/src/main/**/data/pipeline/**'
       - '**/src/main/resources/META-INF/services/*.data.pipeline.*'
       - '!shardingsphere-test/**'
+      - 'shardingsphere-test/**/pom.xml'
       - 'shardingsphere-test/shardingsphere-integration-test/**'
       - '!shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-suite/**'
       - '!*.md'
@@ -49,6 +50,7 @@ on:
       - '**/src/main/**/data/pipeline/**'
       - '**/src/main/resources/META-INF/services/*.data.pipeline.*'
       - '!shardingsphere-test/**'
+      - 'shardingsphere-test/**/pom.xml'
       - 'shardingsphere-test/shardingsphere-integration-test/**'
       - '!shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-suite/**'
       - '!*.md'
