--- a/.github/workflows/it.yml
+++ b/.github/workflows/it.yml
@@ -30,6 +30,7 @@ on:
       - '!shardingsphere-distribution/shardingsphere-proxy-distribution/src/main/release-docs/**'
       - '!shardingsphere-kernel/shardingsphere-data-pipeline/**'
       - '!shardingsphere-test/**'
+      - 'shardingsphere-test/**/pom.xml'
       - 'shardingsphere-test/shardingsphere-integration-test/**'
       - '!shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-scaling/**'
       - 'shardingsphere-test/shardingsphere-integration-agent-test/**'
@@ -46,6 +47,7 @@ on:
       - '!shardingsphere-distribution/shardingsphere-proxy-distribution/src/main/release-docs/**'
       - '!shardingsphere-kernel/shardingsphere-data-pipeline/**'
       - '!shardingsphere-test/**'
+      - 'shardingsphere-test/**/pom.xml'
       - 'shardingsphere-test/shardingsphere-integration-test/**'
       - '!shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-scaling/**'
       - 'shardingsphere-test/shardingsphere-integration-agent-test/**'
