--- a/.github/workflows/it-transaction.yml
+++ b/.github/workflows/it-transaction.yml
@@ -26,6 +26,7 @@ on:
     branches: [ master ]
     paths:
       - '!examples/**'
+      - '.github/workflows/it-transaction.yml'
       - '!shardingsphere-test/**'
       - 'shardingsphere-test/**/pom.xml'
       - 'shardingsphere-test/shardingsphere-integration-test/**'
@@ -46,6 +47,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       postgresql_version: postgres:12-alpine
+      opengauss_version: enmotech/opengauss:2.1.0
       mysql_version: 5.7
     timeout-minutes: 60
     steps:
@@ -66,3 +68,5 @@ jobs:
         run: ./mvnw -nsu -B install -f shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-transaction/pom.xml -Dtransaction.it.env.type=docker -Dtransaction.it.docker.mysql.version=${{ env.mysql_version }}
       - name: Run Transaction PostgreSQL Integration Test
         run: ./mvnw -nsu -B install -f shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-transaction/pom.xml -Dtransaction.it.env.type=docker -Dtransaction.it.docker.postgresql.version=${{ env.postgresql_version }}
+      - name: Run Transaction OpenGauss Integration Test
+        run: ./mvnw -nsu -B install -f shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-transaction/pom.xml -Dtransaction.it.env.type=docker -Dtransaction.it.docker.opengauss.version=${{ env.opengauss_version }}
