Support bitronix and narayana transaction testing (#19628)
* Support bitronix and narayana transaction testing

* Support bitronix and narayana transaction testing

* Split test cases by transaction provider type to avoid docker `non-overlapping IPv4 address pool among the defaults to assign to the network`

* Adjust transaction test timeout and steps

* Simplify test cases, investigate problems

* Modify workflows

* Modify workflows

* Fix checkstyle

* Modify workflow

* Fix docker build error by duplicate conf

* Use master it transaction config

--- a/shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-transaction/pom.xml
+++ b/shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-transaction/pom.xml
@@ -30,6 +30,10 @@
     <properties>
         <maven.deploy.skip>true</maven.deploy.skip>
         <atomikos.version>5.0.8</atomikos.version>
+        <narayana.version>5.12.4.Final</narayana.version>
+        <jboss-transaction-spi.version>7.6.0.Final</jboss-transaction-spi.version>
+        <jboss-logging.version>3.2.1.Final</jboss-logging.version>
+        <btm.version>2.1.3</btm.version>
     </properties>
     
     <dependencies>
@@ -105,6 +109,41 @@
             <groupId>com.atomikos</groupId>
             <artifactId>transactions-jdbc</artifactId>
             <version>${atomikos.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.shardingsphere</groupId>
+            <artifactId>shardingsphere-transaction-xa-narayana</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.narayana.jta</groupId>
+            <artifactId>jta</artifactId>
+            <version>${narayana.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.narayana.jts</groupId>
+            <artifactId>narayana-jts-integration</artifactId>
+            <version>${narayana.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss</groupId>
+            <artifactId>jboss-transaction-spi</artifactId>
+            <version>${jboss-transaction-spi.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.logging</groupId>
+            <artifactId>jboss-logging</artifactId>
+            <version>${jboss-logging.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.shardingsphere</groupId>
+            <artifactId>shardingsphere-transaction-xa-bitronix</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.codehaus.btm</groupId>
+            <artifactId>btm</artifactId>
+            <version>${btm.version}</version>
         </dependency>
     </dependencies>
     
