--- a/shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-transaction/src/test/resources/env/transaction-it-env.properties
+++ b/shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-transaction/src/test/resources/env/transaction-it-env.properties
@@ -20,6 +20,8 @@ transaction.it.env.type=
 transaction.it.env.cases=PostgresSQLAutoCommitTestCase, MultiTableCommitAndRollbackTestCase, SingleTableCommitAndRollbackTestCase, MySQLSetReadOnlyTestCase, MySQLSavePointTestCase, AddResourceTestCase, CloseResourceTestCase
 # transaction.it.env.transtypes=LOCAL, XA, BASE
 transaction.it.env.transtypes=LOCAL, XA
+# transaction.it.env.xa.providers=Atomikos, Bitronix, Narayana
+transaction.it.env.xa.providers=
 # transaction.it.docker.mysql.version=5.7,8.0
 transaction.it.docker.mysql.version=
 # transaction.it.docker.postgresql.version=postgres:10-alpine,postgres:11-alpine,postgres:12-alpine,postgres:13-alpine,postgres:14-alpine
