--- a/.github/workflows/ci-daily.yml
+++ b/.github/workflows/ci-daily.yml
@@ -18,105 +18,46 @@
 # This workflow will build a Java project with Maven
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
 
-name: Continuous Integration
+name: Daily Continuous Integration
 
 on:
-  push:
-    branches: [ master, dev ]
-    paths:
-      - '.github/workflows/ci.yml'
-      - '**/pom.xml'
-      - 'src/resources/**'
-      - '**/src/main/**'
-      - '**/src/test/**'
-      - '!shardingsphere-distribution/**'
-      - '!shardingsphere-test/shardingsphere-integration-*/**'
-      - 'shardingsphere-test/shardingsphere-integration-driver-test/**'
-      - '!*.md'
-  pull_request:
-    branches: [ master ]
-    paths:
-      - '.github/workflows/ci.yml'
-      - '**/pom.xml'
-      - 'src/resources/**'
-      - '**/src/main/**'
-      - '**/src/test/**'
-      - '!shardingsphere-distribution/**'
-      - '!shardingsphere-test/shardingsphere-integration-*/**'
-      - 'shardingsphere-test/shardingsphere-integration-driver-test/**'
-      - '!*.md'
-  repository_dispatch:
-    types: [rerun-ci]
-
-concurrency:
-  group: ${{ github.event_name }}-${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
+  schedule:
+    - cron: '0 18 */1 * *'  # once a day. UTC time
 
 env:
   MAVEN_OPTS: -Dhttp.keepAlive=false -Dmaven.wagon.http.pool=false -Dmaven.wagon.http.retryHandler.class=standard -Dmaven.wagon.http.retryHandler.count=3
 
 jobs:
-  checkstyle-and-apache-rat:
-    runs-on: ubuntu-latest
-    timeout-minutes: 10
-    steps:
-      - uses: actions/checkout@v3
-      - name: Cache dependencies of Checkstyle and Apache Rat
-        uses: actions/cache@v3
-        with:
-          path: ~/.m2/repository
-          key: maven-cache-checkstyle-and-apache-rat-${{ hashFiles('**/pom.xml') }}
-      - name: Run Checkstyle and Apache Rat
-        run: ./mvnw checkstyle:check apache-rat:check -T1C
-
-  linux:
+  ci:
     if: github.repository == 'apache/shardingsphere'
     name: JDK ${{ matrix.java_version }} - on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
-    needs: checkstyle-and-apache-rat
     timeout-minutes: 60
     strategy:
       matrix:
-        os: [ ubuntu-latest ]
+        os: [ ubuntu-latest, macos-latest, windows-latest ]
         java_version: [ 8, 17, 18 ]
     steps:
+      - name: Support longpaths in Windows
+        if: matrix.os == 'windows-latest'
+        run: git config --system core.longpaths true
       - uses: actions/checkout@v3
       - name: Set up JDK ${{ matrix.java_version }}
         uses: actions/setup-java@v2
         with:
           distribution: 'temurin'
           java-version: ${{ matrix.java_version }}
-      - name: Maven resolve ranges
-        run: ./mvnw versions:resolve-ranges -ntp -Dincludes='org.springframework:*,org.springframework.boot:*'
-      - name: Cache Maven Repos
-        uses: actions/cache@v2
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
       - name: Build with Maven
-        run: ./mvnw -B -ntp clean install -Dmaven.javadoc.skip=true -Drat.skip=true -Dcheckstyle.skip=true -Djacoco.skip=true -Dspotless.apply.skip=true
+        run: ./mvnw -B -ntp clean install
       - name: Build examples with Maven
-        run: ./mvnw -B -f examples/pom.xml clean package -DskipTests
-  
+        run: ./mvnw -B -f examples/pom.xml clean package
   
   shardingsphere-example-generator:
     if: github.repository == 'apache/shardingsphere'
     name: ShardingSphere example generator
     runs-on: ubuntu-latest
-    needs: checkstyle-and-apache-rat
     steps:
       - uses: actions/checkout@v3
-      - name: Maven resolve ranges
-        run: ./mvnw versions:resolve-ranges -ntp -Dincludes='org.springframework:*,org.springframework.boot:*'
-      - name: Cache Maven Repos
-        uses: actions/cache@v2
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
       - name: Set up JDK 8
         uses: actions/setup-java@v2
         with:
@@ -131,16 +72,8 @@ jobs:
     if: github.repository == 'apache/shardingsphere'
     runs-on: ubuntu-latest
     name: ShardingSphere test coverage report
-    needs: checkstyle-and-apache-rat
     steps:
       - uses: actions/checkout@v3
-      - name: Cache Maven Repos
-        uses: actions/cache@v2
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven- 
       - name: Set up JDK 8
         uses: actions/setup-java@v2
         with:
