[CI] Improve GitHub Actions integration test (#19811)

--- a/.github/workflows/it-scaling.yml
+++ b/.github/workflows/it-scaling.yml
@@ -28,13 +28,15 @@ on:
       - 'shardingsphere-jdbc/shardingsphere-jdbc-core/src/main/**'
       - '**/*-distsql*/**/src/main/**'
       - 'shardingsphere-kernel/shardingsphere-data-pipeline/**/src/main/**'
+      - 'shardingsphere-kernel/shardingsphere-data-pipeline/**/pom.xml'
       - 'shardingsphere-features/**/src/main/**/scaling/**'
       - '**/src/main/**/data/pipeline/**'
       - '**/src/main/resources/META-INF/services/*.data.pipeline.*'
       - '!shardingsphere-test/**'
-      - 'shardingsphere-test/**/pom.xml'
-      - 'shardingsphere-test/shardingsphere-integration-test/**'
-      - '!shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-suite/**'
+      - 'shardingsphere-test/pom.xml'
+      - 'shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-fixture/**'
+      - 'shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-env/**'
+      - 'shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-scaling/**'
       - '!*.md'
   pull_request:
     branches: [ master ]
@@ -46,13 +48,15 @@ on:
       - 'shardingsphere-jdbc/shardingsphere-jdbc-core/src/main/**'
       - '**/*-distsql*/**/src/main/**'
       - 'shardingsphere-kernel/shardingsphere-data-pipeline/**/src/main/**'
+      - 'shardingsphere-kernel/shardingsphere-data-pipeline/**/pom.xml'
       - 'shardingsphere-features/**/src/main/**/scaling/**'
       - '**/src/main/**/data/pipeline/**'
       - '**/src/main/resources/META-INF/services/*.data.pipeline.*'
       - '!shardingsphere-test/**'
-      - 'shardingsphere-test/**/pom.xml'
-      - 'shardingsphere-test/shardingsphere-integration-test/**'
-      - '!shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-suite/**'
+      - 'shardingsphere-test/pom.xml'
+      - 'shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-fixture/**'
+      - 'shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-env/**'
+      - 'shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-scaling/**'
       - '!*.md'
   schedule:
     - cron: '0 22 */1 * *'  # once a day. UTC time
