--- a/.github/workflows/it.yml
+++ b/.github/workflows/it.yml
@@ -30,9 +30,10 @@ on:
       - '!shardingsphere-distribution/shardingsphere-proxy-distribution/src/main/release-docs/**'
       - '!shardingsphere-kernel/shardingsphere-data-pipeline/**'
       - '!shardingsphere-test/**'
-      - 'shardingsphere-test/**/pom.xml'
-      - 'shardingsphere-test/shardingsphere-integration-test/**'
-      - '!shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-scaling/**'
+      - 'shardingsphere-test/pom.xml'
+      - 'shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-fixture/**'
+      - 'shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-env/**'
+      - 'shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-suite/**'
       - 'shardingsphere-test/shardingsphere-integration-agent-test/**'
       - '!*.md'
   pull_request:
@@ -47,9 +48,10 @@ on:
       - '!shardingsphere-distribution/shardingsphere-proxy-distribution/src/main/release-docs/**'
       - '!shardingsphere-kernel/shardingsphere-data-pipeline/**'
       - '!shardingsphere-test/**'
-      - 'shardingsphere-test/**/pom.xml'
-      - 'shardingsphere-test/shardingsphere-integration-test/**'
-      - '!shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-scaling/**'
+      - 'shardingsphere-test/pom.xml'
+      - 'shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-fixture/**'
+      - 'shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-env/**'
+      - 'shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-suite/**'
       - 'shardingsphere-test/shardingsphere-integration-agent-test/**'
       - '!*.md'
 
