--- a/.github/workflows/it.yml
+++ b/.github/workflows/it.yml
@@ -101,7 +101,6 @@ jobs:
     needs: build-it-image
     strategy:
       matrix:
-        env: [ docker ]
         adapter: [ proxy, jdbc ]
         database: [ MySQL, PostgreSQL ]
         scenario: [ empty_rules ]
@@ -135,48 +134,17 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 10
     strategy:
+      max-parallel: 10
       matrix:
-        env: [ docker ]
         adapter: [ proxy, jdbc ]
+        mode: [ Standalone, Cluster ]
         database: [ MySQL, PostgreSQL ]
         scenario: [ db, tbl, encrypt, readwrite_splitting, shadow ]
-    steps:
-      - uses: actions/checkout@v2
-      - name: Cache Maven Repos
-        uses: actions/cache@v2
-        with:
-          path: ~/.m2/repository
-          key: shardingsphere-it-cache-${{ github.sha }}
-      - name: Set up JDK 8
-        uses: actions/setup-java@v2
-        with:
-          distribution: 'temurin'
-          java-version: 8
-      - name: Download IT image
-        if: matrix.adapter == 'proxy'
-        uses: actions/download-artifact@v3
-        with:
-          name: it-image
-          path: /tmp/
-      - name: Load IT image
-        if: matrix.adapter == 'proxy'
-        run: docker load -i /tmp/shardingsphere-proxy-test.tar
-      - name: Run Integration Test
-        run: ./mvnw -nsu -B install -f shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-suite/pom.xml -Dcheckstyle.skip=true -Dspotless.apply.skip=true -Dit.run.modes=Standalone -Dit.scenarios=${{ matrix.scenario }} -Dit.cluster.adapters=${{ matrix.adapter }} -Dit.cluster.databases=${{ matrix.database }} -Dit.cluster.env.type=DOCKER
-
-  it-single-rule-cluster:
-    name: single rule cluster
-    needs: it-single-rule
-    runs-on: ubuntu-latest
-    timeout-minutes: 10
-    strategy:
-      matrix:
-        env: [ docker ]
-        adapter: [ proxy ]
-        database: [ MySQL, PostgreSQL ]
-        scenario: [ db, encrypt, tbl, shadow, readwrite_splitting ]
         exclude:
+          - adapter: jdbc
+            mode: Cluster
           - adapter: proxy
+            mode: Cluster
             database: PostgreSQL
             scenario: shadow
     steps:
@@ -198,21 +166,26 @@ jobs:
           name: it-image
           path: /tmp/
       - name: Load IT image
+        if: matrix.adapter == 'proxy'
         run: docker load -i /tmp/shardingsphere-proxy-test.tar
       - name: Run Integration Test
-        run: ./mvnw -nsu -B install -f shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-suite/pom.xml -Dcheckstyle.skip=true -Dspotless.apply.skip=true -Dit.run.modes=Cluster -Dit.scenarios=${{ matrix.scenario }} -Dit.cluster.adapters=${{ matrix.adapter }} -Dit.cluster.databases=${{ matrix.database }} -Dit.cluster.env.type=DOCKER
+        run: ./mvnw -nsu -B install -f shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-suite/pom.xml -Dcheckstyle.skip=true -Dspotless.apply.skip=true -Dit.cluster.env.type=DOCKER -Dit.cluster.adapters=${{ matrix.adapter }} -Dit.run.modes=${{ matrix.mode }} -Dit.cluster.databases=${{ matrix.database }} -Dit.scenarios=${{ matrix.scenario }}
 
   it-mixture-rule:
     name: mixture rule
-    needs: [ it-empty-rule, it-single-rule, it-single-rule-cluster ]
+    needs: it-single-rule
     runs-on: ubuntu-latest
     timeout-minutes: 10
     strategy:
+      max-parallel: 8
       matrix:
-        env: [ docker ]
         adapter: [ proxy, jdbc ]
+        mode: [ Standalone, Cluster ]
         database: [ MySQL, PostgreSQL ]
         scenario: [ dbtbl_with_readwrite_splitting, dbtbl_with_readwrite_splitting_and_encrypt, sharding_and_encrypt ]
+        exclude:
+          - adapter: jdbc
+            mode: Cluster
     steps:
       - uses: actions/checkout@v2
       - name: Cache Maven Repos
@@ -235,41 +208,7 @@ jobs:
         if: matrix.adapter == 'proxy'
         run: docker load -i /tmp/shardingsphere-proxy-test.tar
       - name: Run Integration Test
-        run: ./mvnw -nsu -B install -f shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-suite/pom.xml -Dcheckstyle.skip=true -Dspotless.apply.skip=true -Dit.run.modes=Standalone -Dit.scenarios=${{ matrix.scenario }} -Dit.cluster.adapters=${{ matrix.adapter }} -Dit.cluster.databases=${{ matrix.database }} -Dit.cluster.env.type=DOCKER
-
-  it-mixture-rule-cluster:
-    name: mixture rule cluster
-    needs: [ it-empty-rule, it-single-rule, it-single-rule-cluster, it-mixture-rule ]
-    runs-on: ubuntu-latest
-    timeout-minutes: 10
-    strategy:
-      matrix:
-        env: [ docker ]
-        adapter: [ proxy ]
-        database: [ MySQL, PostgreSQL ]
-        scenario: [ dbtbl_with_readwrite_splitting, dbtbl_with_readwrite_splitting_and_encrypt, sharding_and_encrypt ]
-    steps:
-      - uses: actions/checkout@v2
-      - name: Cache Maven Repos
-        uses: actions/cache@v2
-        with:
-          path: ~/.m2/repository
-          key: shardingsphere-it-cache-${{ github.sha }}
-      - name: Set up JDK 8
-        uses: actions/setup-java@v2
-        with:
-          distribution: 'temurin'
-          java-version: 8
-      - name: Download IT image
-        if: matrix.adapter == 'proxy'
-        uses: actions/download-artifact@v3
-        with:
-          name: it-image
-          path: /tmp/
-      - name: Load IT image
-        run: docker load -i /tmp/shardingsphere-proxy-test.tar
-      - name: Run Integration Test
-        run: ./mvnw -nsu -B install -f shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-suite/pom.xml -Dcheckstyle.skip=true -Dspotless.apply.skip=true -Dit.run.modes=Cluster -Dit.scenarios=${{ matrix.scenario }} -Dit.cluster.adapters=${{ matrix.adapter }} -Dit.cluster.databases=${{ matrix.database }} -Dit.cluster.env.type=DOCKER
+        run: ./mvnw -nsu -B install -f shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-suite/pom.xml -Dcheckstyle.skip=true -Dspotless.apply.skip=true -Dit.cluster.env.type=DOCKER -Dit.cluster.adapters=${{ matrix.adapter }} -Dit.run.modes=${{ matrix.mode }} -Dit.cluster.databases=${{ matrix.database }} -Dit.scenarios=${{ matrix.scenario }}
 
   mysql-proxy-agent:
     name: Agent Metrics & OpenTelemetry
