--- a/shardingsphere-test/shardingsphere-pipeline-test/src/test/resources/job-progress-no-finished.yaml
+++ b/shardingsphere-test/shardingsphere-pipeline-test/src/test/resources/job-progress-no-finished.yaml
@@ -15,12 +15,12 @@
 # limitations under the License.
 #
 #
-# incremental:
-#   ds0:
-#     delay:
-#       lastEventTimestamps: 0
-#       latestActiveTimeMillis: 0
-#     position: ''
+#incremental:
+#  dataSourceName: ds0
+# delay:
+#    lastEventTimestamps: 0
+#    latestActiveTimeMillis: 0
+#  position: ''
 inventory:
   unfinished:
     ds0.t_1: i,1,2
