--- a/shardingsphere-test/shardingsphere-pipeline-test/src/test/resources/job-progress-no-inventory.yaml
+++ b/shardingsphere-test/shardingsphere-pipeline-test/src/test/resources/job-progress-no-inventory.yaml
@@ -15,11 +15,11 @@
 # limitations under the License.
 #
 #
- incremental:
-   ds0:
-     delay:
-       lastEventTimestamps: 0
-       latestActiveTimeMillis: 0
-     position: ''
- sourceDatabaseType: H2
- status: RUNNING
+incremental:
+  dataSourceName: ds0
+  delay:
+    lastEventTimestamps: 0
+    latestActiveTimeMillis: 0
+  position: ''
+sourceDatabaseType: H2
+status: RUNNING
