Refactor : replace Proxy Container in scaling with the one in env module(#19956) (#19992)
* Refactor : replace Proxy Container in scaling with the one in env module(#19956)

* Remove : remove scenario config from env

* Remove : remove the duplicated container entry in scaling

--- a/shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-env/src/test/resources/env/scaling/postgresql/postgresql.conf
+++ b/shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-env/src/test/resources/env/scaling/postgresql/postgresql.conf
@@ -15,31 +15,11 @@
 # limitations under the License.
 #
 
-mode:
-  type: Cluster
-  repository:
-    type: ZooKeeper
-    props:
-      namespace: it_db_mysql
-      server-lists: zk.host:2181
-      timeToLiveSeconds: 60
-      operationTimeoutMilliseconds: 500
-      retryIntervalMilliseconds: 500
-      maxRetries: 3
-  overwrite: false
-
-rules:
-  - !AUTHORITY
-    users:
-      - proxy@:Proxy@123
-    provider:
-      type: ALL_PERMITTED
-
-props:
-  max-connections-size-per-query: 1
-  kernel-executor-size: 16  # Infinite by default.
-  proxy-frontend-flush-threshold: 128  # The default value is 128.
-  proxy-hint-enabled: true
-  sql-show: true
-  sql-federation-enabled: true
-  proxy-mysql-default-version: 5.7.22 
+listen_addresses = '*'
+wal_level = logical
+max_connections = 600
+max_replication_slots = 10
+log_timezone = 'Asia/Shanghai'
+datestyle = 'iso, mdy'
+timezone = 'Asia/Shanghai'
+wal_sender_timeout = 0
