--- a/shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-env/src/test/resources/env/scaling/mysql/my.cnf
+++ b/shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-env/src/test/resources/env/scaling/mysql/my.cnf
@@ -15,31 +15,15 @@
 # limitations under the License.
 #
 
-mode:
-  type: Cluster
-  repository:
-    type: ZooKeeper
-    props:
-      namespace: it_db_mysql
-      server-lists: zk.host:2181
-      timeToLiveSeconds: 60
-      operationTimeoutMilliseconds: 500
-      retryIntervalMilliseconds: 500
-      maxRetries: 3
-  overwrite: false
+[mysql]
 
-rules:
-  - !AUTHORITY
-    users:
-      - proxy@:Proxy@123
-    provider:
-      type: ALL_PERMITTED
-
-props:
-  max-connections-size-per-query: 1
-  kernel-executor-size: 16  # Infinite by default.
-  proxy-frontend-flush-threshold: 128  # The default value is 128.
-  proxy-hint-enabled: true
-  sql-show: true
-  sql-federation-enabled: true
-  proxy-mysql-default-version: 5.7.22 
+[mysqld]
+log-bin=mysql-bin
+binlog-format=row
+binlog-row-image=full
+max_connections=600
+default-authentication-plugin=mysql_native_password
+sql_mode=
+lower_case_table_names=1
+# for mysql 8.0
+secure_file_priv=/var/lib/mysql
