--- a/shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-env/src/test/resources/env/scaling/postgresql/server.yaml
+++ b/shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-env/src/test/resources/env/scaling/postgresql/server.yaml
@@ -20,18 +20,19 @@ mode:
   repository:
     type: ZooKeeper
     props:
-      namespace: it_db_mysql
+      namespace: it_db_postgresql
       server-lists: zk.host:2181
-      timeToLiveSeconds: 60
-      operationTimeoutMilliseconds: 500
       retryIntervalMilliseconds: 500
+      timeToLiveSeconds: 60
       maxRetries: 3
-  overwrite: false
+      operationTimeoutMilliseconds: 500
+  overwrite: true
 
 rules:
   - !AUTHORITY
     users:
       - proxy@:Proxy@123
+      - sharding@:sharding
     provider:
       type: ALL_PERMITTED
 
@@ -39,7 +40,18 @@ props:
   max-connections-size-per-query: 1
   kernel-executor-size: 16  # Infinite by default.
   proxy-frontend-flush-threshold: 128  # The default value is 128.
-  proxy-hint-enabled: true
+  proxy-hint-enabled: false
   sql-show: true
-  sql-federation-enabled: true
-  proxy-mysql-default-version: 5.7.22 
+  check-table-metadata-enabled: false
+  # Proxy backend query fetch size. A larger value may increase the memory usage of ShardingSphere Proxy.
+  # The default value is -1, which means set the minimum value for different JDBC drivers.
+  proxy-backend-query-fetch-size: -1
+  proxy-frontend-executor-size: 0 # Proxy frontend executor size. The default value is 0, which means let Netty decide.
+  # Available options of proxy backend executor suitable: OLAP(default), OLTP. The OLTP option may reduce time cost of writing packets to client, but it may increase the latency of SQL execution
+  # and block other clients if client connections are more than `proxy-frontend-executor-size`, especially executing slow SQL.
+  proxy-backend-executor-suitable: OLAP
+  proxy-frontend-max-connections: 0 # Less than or equal to 0 means no limitation.
+  sql-federation-enabled: false
+  # Available proxy backend driver type: JDBC (default), ExperimentalVertx
+  proxy-backend-driver-type: JDBC
+  proxy-frontend-database-protocol-type: PostgreSQL
