--- a/shardingsphere-test/shardingsphere-pipeline-test/src/test/resources/job-progress-failure.yaml
+++ b/shardingsphere-test/shardingsphere-pipeline-test/src/test/resources/job-progress-failure.yaml
@@ -15,11 +15,5 @@
 # limitations under the License.
 #
 #
-incremental:
-  dataSourceName: ds0
-  delay:
-    lastEventTimestamps: 0
-    latestActiveTimeMillis: 0
-  position: ''
 sourceDatabaseType: H2
-status: RUNNING
+status: PREPARING_FAILURE
