Refactor : transfer all container related config files to env module (#20021)
* Refactor : transfer all container related config files to env module (#19958)

* Refactor : make scaling init resource base on env

* Refactor : refactor the storage container init process (#19958)

* Refactor : add default password for PG container

* Refactor : refactor the setCommand method to trigger each command

* Refactor : refactor the config files for scaling

* Refactor : refactor the configuration factory to scaling (#19958)

* Refactor : add H2 type to pass the configuration check

--- a/shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-scaling/src/test/resources/env/postgresql/server.yaml
+++ b/shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-scaling/src/test/resources/env/postgresql/server.yaml
@@ -31,7 +31,7 @@ mode:
 rules:
   - !AUTHORITY
     users:
-      - root@:Root@123
+      - proxy@:Proxy@123
       - sharding@:sharding
     provider:
       type: ALL_PERMITTED
