--- a/shardingsphere-db-protocol/shardingsphere-db-protocol-core/pom.xml
+++ b/shardingsphere-db-protocol/shardingsphere-db-protocol-core/pom.xml
@@ -29,6 +29,12 @@
     
     <dependencies>
         <dependency>
+            <groupId>org.apache.shardingsphere</groupId>
+            <artifactId>shardingsphere-common-error</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        
+        <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-codec</artifactId>
         </dependency>
