--- a/shardingsphere-db-protocol/shardingsphere-db-protocol-mysql/pom.xml
+++ b/shardingsphere-db-protocol/shardingsphere-db-protocol-mysql/pom.xml
@@ -33,5 +33,11 @@
             <artifactId>shardingsphere-db-protocol-core</artifactId>
             <version>${project.version}</version>
         </dependency>
+        
+        <dependency>
+            <groupId>org.apache.shardingsphere</groupId>
+            <artifactId>shardingsphere-mysql-error</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 </project>
