Refactor transaction container (#20200)
* Refactor : reafctor the transaction storage container(#19627)

* Refactor : refactor the user/pass

* Refactor : refactor the initial sql file

* Revert : revert the transaction config files

* Refactor : change the default user/pass for proxy in transaction test

* Fix : fix an error proxy password

* Fix : fix a pg conainer command initialization issue

* Refactor : update the role name of opengauss

* Refactor : refactor the opengauss container

* Refactor : refactor the transaction it as code conduct

* Refactor : refactor as the reviewer's suggestion

--- a/shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-transaction/src/test/resources/env/transaction-it-env.properties
+++ b/shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-transaction/src/test/resources/env/transaction-it-env.properties
@@ -19,7 +19,7 @@ transaction.it.env.type=
 # transaction.it.env.cases= MySQLAutoCommitTestCase, PostgresSQLAutoCommitTestCase, ClassicTransferTestCase, MultiTableCommitAndRollbackTestCase, SingleTableCommitAndRollbackTestCase, MySQLSetReadOnlyTestCase, MySQLSavePointTestCase, PostgreSQLSavePointTestCase 
 transaction.it.env.cases=PostgresSQLAutoCommitTestCase, MultiTableCommitAndRollbackTestCase, SingleTableCommitAndRollbackTestCase, MySQLSetReadOnlyTestCase, MySQLSavePointTestCase, MySQLLocalTruncateTestCase, MySQLXATruncateTestCase
 # transaction.it.env.transtypes=LOCAL, XA, BASE
-transaction.it.env.transtypes=LOCAL, XA
+transaction.it.env.transtypes=
 # transaction.it.env.xa.providers=Atomikos, Bitronix, Narayana
 transaction.it.env.xa.providers=
 # transaction.it.docker.mysql.version=5.7,8.0
@@ -39,5 +39,5 @@ transaction.it.native.postgresql.port=5432
 transaction.it.native.opengauss.username=gaussdb
 transaction.it.native.opengauss.password=Root@123
 transaction.it.native.opengauss.port=5432
-transaction.it.proxy.username=root
-transaction.it.proxy.password=root
+transaction.it.proxy.username=proxy
+transaction.it.proxy.password=Proxy@123
