Rename shardingsphere-error module to shardingsphere-dialect-exception (#20230)
* Rename shardingsphere-error module to shardingsphere-dialect-exception

* Rename shardingsphere-error module to shardingsphere-dialect-exception

--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
     
     <modules>
         <module>shardingsphere-infra</module>
-        <module>shardingsphere-error</module>
+        <module>shardingsphere-dialect-exception</module>
         <module>shardingsphere-sql-parser</module>
         <module>shardingsphere-distsql</module>
         <module>shardingsphere-db-protocol</module>
