--- a/shardingsphere-dialect-exception/shardingsphere-postgresql-dialect-exception/pom.xml
+++ b/shardingsphere-dialect-exception/shardingsphere-postgresql-dialect-exception/pom.xml
@@ -21,17 +21,23 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.apache.shardingsphere</groupId>
-        <artifactId>shardingsphere-error</artifactId>
+        <artifactId>shardingsphere-dialect-exception</artifactId>
         <version>5.1.3-SNAPSHOT</version>
     </parent>
-    <artifactId>shardingsphere-mysql-error</artifactId>
+    <artifactId>shardingsphere-postgresql-dialect-exception</artifactId>
     <name>${project.artifactId}</name>
     
     <dependencies>
         <dependency>
             <groupId>org.apache.shardingsphere</groupId>
-            <artifactId>shardingsphere-common-error</artifactId>
+            <artifactId>shardingsphere-dialect-exception-core</artifactId>
             <version>${project.version}</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
